# IML-Paintability

./: .gitignore  N6K3-Clean.ipynb  README.md  Training Notebook.ipynb
c/: Board.cpp  CMakeLists.txt  config.json  graph.cpp  graph.h  helper.cpp  helper.h  main  main.cpp  myjob.sbatch  simple_verify.cpp  verify.cpp
c/include/: Board.h  archive.h  board.h  board_operation.h  compare.h  game_state.h  graph.h  hash.h  helper.h  init.h  minimax.h  scoped_timer.h  thread_pool.h
c/losing/: N4_K3_goal4_board.txt  N4_K3_goal5_board.txt  N5_K3_goal6_board.txt  N5_K3_goal7_board.txt  N6_K3_goal6_board.txt  N6_K3_goal7_board.txt  N6_K3_goal8_board.txt  N7_K3_goal8_board.txt  N7_K3_goal9_board.txt  losing_board.txt
c/src/: Board.cpp  archive.cpp  board.cpp  board_apply_moves.cpp  board_get_moves.cpp  board_operation.cpp  compare.cpp  game_state.cpp  game_state_get_moves_pruned.cpp  get_all_pusher_moves_pruned.cpp  get_moves_pruned.cpp  graph.cpp  hash.cpp  helper.cpp  init.cpp  minimax.cpp  scoped_timer.cpp  thread_pool.cpp
c/test/: CMakeLists.txt
c/test/common/: utility.cpp  utility.h
c/test/unit/: board.cpp  compare.cpp  game_state_get_moves_pruned.cpp  get_all_pusher_moves_pruned.cpp  get_moves_pruned.cpp  graph.cpp
c/winning/: N4_K3_goal4_board.txt  N4_K3_goal5_board.txt  N5_K3_goal6_board.txt  N5_K3_goal7_board.txt  N6_K3_goal6_board.txt  N6_K3_goal7_board.txt  N6_K3_goal8_board.txt  N7_K3_goal8_board.txt  N7_K3_goal9_board.txt  winning_boards.txt
